--- a/css/main.css
+++ b/css/main.css
@@ -1254,6 +1254,11 @@ html {
     padding-right: 15px;
   }
 
+  .ad\:px-\[40px\]{
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
   .ad\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
